log
Wed Mar 17 01:48:26 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+b;
     ^
cc1: all warnings being treated as errors
Compilation failed
Wed Mar 17 01:48:47 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
eb6f015
Thu Mar 18 03:13:24 UTC 2021: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
f986a92
Thu Mar 18 04:37:53 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Thu Mar 18 04:41:55 UTC 2021: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Thu Mar 18 04:59:03 UTC 2021: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
Thu Mar 18 05:05:02 UTC 2021: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Fri Mar 19 00:06:31 UTC 2021: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|5
total_score: 20/70
526db51
Fri Mar 19 02:37:50 UTC 2021: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
4cb1217
Fri Mar 19 02:43:10 UTC 2021: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
f2d6314
Fri Mar 19 03:07:21 UTC 2021: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
3a42b47
Fri Mar 19 03:09:35 UTC 2021: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
2045e79
Fri Mar 19 19:03:31 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
2d74f12
Fri Mar 19 19:04:57 UTC 2021: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  2|5
total_score: 20/70
8b6beac
